src/test/ui/impl-trait/universal-mismatched-type.stderr
error[E0308]: mismatched types
  --> $DIR/universal-mismatched-type.rs:14:5
   |
LL | fn foo(x: impl Debug) -> String {
   |                          ------ expected `std::string::String` because of return type
LL |     x //~ ERROR mismatched types
   |     ^ expected struct `std::string::String`, found `impl std::fmt::Debug` parameter
   |
   = note: expected type `std::string::String`
              found type `impl std::fmt::Debug`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
